[gd_scene load_steps=9 format=2]

[ext_resource path="res://png/png/scifiUnit_09.png" type="Texture" id=1]
[ext_resource path="res://png/png/barHorizontal_green_mid.png" type="Texture" id=2]
[ext_resource path="res://png/png/crossair_blueOutline.png" type="Texture" id=3]
[ext_resource path="res://scene/tank.gd" type="Script" id=4]
[ext_resource path="res://audio/sf_canon_01.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/SFB-explosion2.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 54.75, 35.75 )

[sub_resource type="CircleShape2D" id=2]
radius = 200.0

[node name="tank" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 4 )

[node name="cible" type="Sprite" parent="."]
position = Vector2( -4.73004, 16.3975 )
scale = Vector2( 3.29015, 2.75239 )
texture = ExtResource( 3 )

[node name="blinder" type="Sprite" parent="."]
scale = Vector2( 2.17969, 1.76172 )
texture = ExtResource( 1 )

[node name="can" type="Position2D" parent="blinder"]
position = Vector2( 24.6175, -10.722 )
scale = Vector2( 0.458781, 0.567627 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.313919, 1.5568 )
shape = SubResource( 1 )

[node name="vie" type="TextureProgress" parent="."]
margin_left = -35.0
margin_top = -47.0
margin_right = 35.0
margin_bottom = -40.0
max_value = 600.0
value = 600.0
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="."]
margin_left = -35.0
margin_top = -73.0
margin_right = 35.0
margin_bottom = -50.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="audio2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
[connection signal="input_event" from="." to="." method="_on_tank_input_event"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
